# app/Models/Menu.php
@@ -1,0 +1,30 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\BelongsTo;
+
+class Menu extends Model
+{
+    use HasFactory;
+
+    protected $fillable = [
+        'id',
+        'branch_id',
+        'name_en',
+        'name_ar',
+        'QR',
+    ];
+
+    /**
+     * Get the branch that owns the Menu
+     *
+     * @return \Illuminate\Database\Eloquent\Relations\BelongsTo
+     */
+    public function branch(): BelongsTo
+    {
+        return $this->belongsTo(Branch::class, 'id', 'branch_id');
+    }
+}
